--- a/solidity/package.json
+++ b/solidity/package.json
@@ -5,6 +5,8 @@
     "hardhat": "^2.12.7"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.1",
+    "abdk-libraries-solidity": "^3.2.0",
     "alchemy-sdk": "^2.4.3"
   }
 }
